--- a/men.html
+++ b/men.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="next-page position-fixed top-50 start-0 ms-3">
-        <a href="women.html">&nbsp;&nbsp;&nbsp;&nbsp;Mujer</a>
+        <a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;Mujer</a>
     </div>
     <div class="next-page position-fixed top-50 end-0 me-3">
         <a href="kids.html">Niños&nbsp;&nbsp;&nbsp;&nbsp;</a>
