--- a/men.html
+++ b/men.html
@@ -17,13 +17,13 @@
     <div class="content-fluid">
         <nav class="d-flex justify-content-between align-items-center">
             <div class="logo">
-                <a href="#"><img src="assets/zara-logo.svg" width="133" height="54" alt=""></a>
+                <a href="index.html"><img src="assets/zara-logo.svg" width="133" height="54" alt=""></a>
             </div>
             <div class="menu ">
                 
             </div>
             <div class="menu-m d-block d-sm-none">
-                <svg data-bs-toggle="dropdown" aria-expanded="false" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/></svg>
+                <svg role="button" data-bs-toggle="dropdown" aria-expanded="false" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/></svg>
                 <ul class="dropdown-menu">
                     <li><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;Buscar</a></li>
                     <li><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;Iniciar Sesión</a></li>
